Improving loading states, navigation, and form validation.

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,7 +7,7 @@
     <title>Poll Demo with React and AWS Serverless</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">Loading the Poll Demo App...</div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
