Improving loading state for polls, adding alert after voting, adding types readme.

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,7 +7,9 @@
     <title>Poll Demo with React and AWS Serverless</title>
   </head>
   <body>
-    <div id="root">Loading the Poll Demo App...</div>
+    <div id="root">
+      <p style="font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif; text-align: center;">Loading the Poll Demo App...</p>
+    </div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
